<resources>
    <string name="app_name">MyKitchenPal</string>
    <string name="hi_welcome_back">Hi, Welcome Back!</string>
    <string name="hello_again_you_ve_been_missed">Hello again, you’ve been missed!</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="login">Login</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="facebook_logo">Facebook Logo</string>
    <string name="gmail_logo">Gmail Logo</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="or_login_with">Or Login With</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="google">Google</string>
    <string name="create_account">Create Account</string>
    <string name="plan_your_food_today">Plan your food today!</string>
    <string name="or_sign_up_with">Or Sign Up With</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="app_slogan">Fuel Your Day, Plan Your Way: Simplify with our Food Planner App!</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="google_logo">Google Logo</string>
    <string name="for_you">For you</string>
    <string name="search">Search</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="favorite">Favorite</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="trending_meal">Trending Meal</string>
    <string name="our_categories">Our Categories</string>
    <string name="category_thumbnail">Category Thumbnail</string>
    <string name="search_meals">Search Meals…</string>
    <string name="save">Save</string>
    <string name="meal_thumbnail">Meal Thumbnail</string>
    <string name="remember_me">Remember Me</string>
    <string name="area_flag">Area Flag</string>
    <string name="most_popular_areas">Most Popular Areas</string>
    <string name="category">Category:</string>
    <string name="area">Area:</string>
    <string name="meal_instructions">Meal Instructions:</string>
    <string name="top_ingredients">Top Ingredients</string>
    <string name="ingredients">Ingredients:</string>
    <string name="ingredient_thumbnail">Ingredient Thumbnail</string>
    <string name="save_button">Save Button</string>
    <string name="meal_is_deleted_from_favorites">Meal is deleted from favorites.</string>
    <string name="meal_is_added_to_favorites_successfully">Meal is added to favorites successfully!</string>
    <string name="your_favorite_meals">Your Favorite Meals:</string>
    <string name="undo">Undo</string>
    <string name="add_to_calendar_button">Add to Calendar Button</string>
    <string name="add_to_favorites_button">Add to Favorites Button</string>
    <string name="meal_added_to_calendar_successfully">Meal added to calendar successfully!</string>
    <string name="remove_icon">Remove Icon</string>
    <string name="can_t_follow_instructions_watch_a_video">Can\'t follow instructions?\nWatch a Video!</string>
    <string name="meal_details">Meal Details</string>
    <string name="meals">Meals</string>
    <string name="default_web_client_id">357883500328-3582vqtq0u8nlgepvhs7b4ulhif5nt7a.apps.googleusercontent.com</string>
    <string name="you_have_lost_connection_to_the_internet_nthis_app_is_offline">You have lost connection to the internet\nThis app is offline.</string>
    <string name="logout_button">Logout Button</string>
    <string name="registered_successfully">Registered successfully!</string>
    <string name="signed_in_successfully">Signed-in successfully!</string>
    <string name="search_meal_by_name">Search meal by name</string>
    <string name="search_for_an_ingredient">Search for an ingredient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="application_logo">Application Logo</string>
    <string name="signal_disconnected_icon">Signal Disconnected Icon</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="failed_to_connect">Failed to connect to MyKitchenPal. Please check your devices network connection</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="backed_up_meals_successfully">Backed up meals successfully!</string>
    <string name="failed_to_backup_meals">Failed to backup meals.</string>
    <string name="meal_is_deleted_from_calendar">Meal is deleted from calendar.</string>

</resources>