<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/forYouFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/for_you" />
    <item
        android:id="@+id/searchFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/search"
        android:title="@string/search" />
    <item
        android:id="@+id/mealPlanFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/calendar"
        android:title="@string/meal_plan" />
    <item
        android:id="@+id/favoriteFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/favorite"
        android:title="@string/favorite" />
</menu>