<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/forYouFragment">

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.foodplanner.home.view.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/forYouFragment"
        android:name="com.example.foodplanner.home.view.ForYouFragment"
        android:label="@string/for_you"
        tools:layout="@layout/fragment_for_you" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.foodplanner.home.view.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/mealPlanFragment"
        android:name="com.example.foodplanner.home.view.MealPlanFragment"
        android:label="@string/meal_plan"
        tools:layout="@layout/fragment_meal_plan" />
</navigation>