<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.AuthActivity">

    <FrameLayout
        android:id="@+id/authContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <fragment
            android:id="@+id/auth_nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/auth_nav_graph" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/noInternetContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/signal_disconnected_icon"
            android:src="@drawable/ic_signal_disconnected"
            app:tint="@color/white" />

        <TextView
            style="@style/textHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failed_to_connect"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>